# Context-GC

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
docs/: CONTEXT-COMPACTION-DESIGN.md  OpenViking与Sirchmunk对比.md  configuration.md  与ClaudeCode对比.md  与OpenViking对比.md  记忆系统设计.md
docs/comparisons/: agentscope.md  claude-code.md  cursor.md  langgraph.md  memgpt.md  openclaw.md  openviking.md  sirchmunk.md
docs/design/: context-compression.md  memory-system.md
docs/references/: openviking-replica-no-embedding.md
docs/testing/: TEST_RECORD.md
examples/: context_gc_with_storage.py
scripts/: migrate_output_to_date_dirs.py
src/context_gc/: __init__.py  compaction.py  context_gc.py  core.py  defaults.py  generational.py  state.py
tests/: test_100_rounds.py  test_core_helpers.py  test_distillation.py  test_e2e_asme.py  test_e2e_cases.py  test_experience_task_assignment.py  test_generational.py  test_memory.py  test_repeat_session_dedup.py  test_skill_backup.py  test_storage.py
tests/data/: __init__.py  chatme_@01_会议纪要_meeting_minutes_all_d_chat_1773052326743_2026-03-22.json  chatme_@02_测试数据_销售业绩表.csv 按照下面统计任务表格，_chat_1773368725892_2026-03-22.json  chatme_@分享_ASME_technical_sharing.md _chat_1773190956628_2026-03-22.json  chatme_loader.py  chatme_「请让测试工程师为「用户登录」功能设计 5 条测试用例_chat_1772622467933_2026-03-22.json  chatme_下面这个跨部门协同任务的全部执行结果在 _Users_jia_chat_1773841820958_2026-03-22.json  chatme_帮我写个python脚本，实现计算器功能_chat_1772594090055_2026-03-22.json  chatme_帮我构造真实的智能体对话，每一轮对话分为一问一答，需写成两行_chat_1774011371922_2026-03-22.json  (+4 more)
(+22 files in other folders)
