[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-gc"
version = "0.1.0"
description = "Model-agnostic conversation context management with generational compression, layered persistence, and memory distillation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "jiangyue" },
]
keywords = ["llm", "context", "compression", "memory", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
]
example = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
]

[project.urls]
Repository = "https://github.com/jiangyue/context-gc"

[tool.hatch.build.targets.wheel]
packages = ["src/context_gc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
